# onnx-quantizer-cli

./: .gitignore  CMakeLists.txt  ChangeLog.md  README.md
src/: main.cpp  model_info.cpp  model_info.hpp  model_loader.cpp  model_loader.hpp  optimizer.cpp  optimizer.hpp  quantizer.cpp  quantizer.hpp
tests/: test.cpp  test_quantize_aplly.cpp
